--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         
             <select class="country" name="country" id="country" required> <br><br>
 
-            <option value="">--Select a country--</option> 
+            <option value="">--Select Your Country</option> 
     
             <option value="">United States</option>
             <option value="">Canada</option>
