--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </select>
 
     <label class="age" for=""></label>
-    <input class="d" type="date" name="" id="" value=""> 
+    <input class="d" type="date" name="" id="" value="" placeholder="date of Birth"> 
 <br><br>
     <label class="gen" for="">Select Your Gender:</label>
     <input type="radio" name="Gender" id="" value="">Female
